Make resume one page

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -27,7 +27,7 @@
 
 % Set applicant's personal data for header
 \name{Kai Wang}
-\address{Shoupakou North St, 100055 \linebreak Xicheng District, Beijing, China}
+\address{Shoupakou North St, 100055 \linebreak Beijing, China}
 \contacts{(+86) 13811539414 \linebreak charles.wangkai@gmail.com}
 
 \begin{document}
@@ -50,7 +50,7 @@
 		\begin{cvsubsection}{SDE}{Amazon, China}{Apr 2014 – Oct 2014}
 			MFNCOD (Merchant Fulfillment Network, Cash On Delivery)
 			\begin{itemize}
-				\item Implemented the integration of ship track information from the carrier Best Express into Amazon China MFN. (Java, JSON, Git)
+				\item Integrated ship track information from the carrier Best Express into Amazon China MFN. (Java, JSON, Git)
 				\item Enhanced the internal tool used by the operational team. (Ruby on Rails)
 				\item Achieved 90\%+ code coverage. (Unit Test)
 				\item Made Data Warehouse reports on a regular basis for operational monitoring. (SQL)
@@ -83,8 +83,8 @@
 				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th. (ID: goalboy1015)
 				\item \textbf{Google Code Jam (2014):} Advanced to Round 2. Ranked 670th. (ID: goalboy1015)
 				\item \textbf{IBM CDL I/O Contest (2013):} A 3-day hackathon. Ranked 5th out of 64 projects. Developed a mobile app for reading analytics and recommendations.
-				\item \textbf{Project Euler (\url{https://projecteuler.net}):} Level 13. Solved 325 problems. (ID: goalboy)
-				\item \textbf{HackerRank ProjectEuler+ Contest (\url{https://www.hackerrank.com/projecteuler}:} Ranked top 4 out of 70000+ participants. (ID: goalboy)
+				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
+				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked top 4 out of 70000+ participants. (ID: goalboy)
 				\item \textbf{Topcoder - College Tour Beijing (2008):} Second Prize. Ranked 15th. (ID: GOALBOY)
 			\end{itemize}
 		\end{cvsubsection}
