Update personal resume

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -26,8 +26,8 @@
 \usepackage{hyperref}
 
 % Set applicant's personal data for header
-\name{Kai Wang}
-\address{Shoupakou North St, 100055 \linebreak Beijing, China}
+\name{Kai Wang \linebreak \linebreak \normalsize{Aim to Solve Any Technical Problems}}
+\address{Haidian District \linebreak Beijing, China}
 \contacts{(+86) 13811539414 \linebreak charles.wangkai@gmail.com}
 
 \begin{document}
@@ -37,32 +37,39 @@
 	
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Big Data Engineer}{Ping++}{Dec 2015 – Nov 2017}
-			Growth Intelligence
+		\begin{cvsubsection}{Senior Software Engineer}{BigOne Lab, China}{Dec 2017 – Oct 2019}
+			Data Intelligence Platform for Key Decision Makers
 			\begin{itemize}
-				\item Implemented ETL for payments, ID mapping, BI, internal stats. (Aliyun MaxCompute, SQL, Java)
-				\item Initiated and developed a web crawler to scan company information from web pages. (Python)
-				\item Implemented a sales amount prediction application based on machine learning. (Xgboost, Python, Shell Script)
-				\item Developed fast algorithms to decrypt millions of hashed IMEI IDs. (Java, AWS EC2)
+				\item Explored and applied new methods in Tech Lab. (AWS Lambda, Google Apps Script, Slack Bot, NLP)
+				\item Led the development of the web dashboard. (React, Node.js, Elasticsearch, Redis, Code Review)
+				\item Developed web crawlers to extract public data. (Python, Scrapy, Reverse Engineering)
+			\end{itemize}
+		\end{cvsubsection}
+
+		\begin{cvsubsection}{Big Data Engineer}{Ping++, China}{Dec 2015 – Nov 2017}
+			Business Intelligence Platform to Drive Growth
+			\begin{itemize}
+				\item Implemented ETL, user id mapping, key metrics. (Aliyun MaxCompute, SQL, Java)
+				\item Implemented a sales amount prediction application. (Machine Learning, Xgboost, Python)
+				\item Restored millions of hashed IMEI ids. (Multiprocessing, Java, AWS EC2)
 			\end{itemize}
 		\end{cvsubsection}
 		
-		\begin{cvsubsection}{SDE}{Amazon, China}{Apr 2014 – Oct 2014}
+		\begin{cvsubsection}{Software Engineer}{Amazon, China}{Apr 2014 – Oct 2014}
 			MFNCOD (Merchant Fulfillment Network, Cash On Delivery)
 			\begin{itemize}
-				\item Integrated ship track information from the carrier Best Express into Amazon China MFN. (Java, JSON, Git)
+				\item Integrated ship track information from the carrier Best Express into Amazon China MFN. (Java, Unit Test)
 				\item Enhanced the internal tool used by the operational team. (Ruby on Rails)
-				\item Achieved 90\%+ code coverage. (Unit Test)
-				\item Made Data Warehouse reports on a regular basis for operational monitoring. (SQL)
+				\item Built data warehouse reports on a regular basis for operational monitoring. (SQL)
 			\end{itemize}
 		\end{cvsubsection}
 		
 		\begin{cvsubsection}{Software Engineer}{IBM, China Development Lab}{Jul 2009 – Apr 2014}
-			Entitled Software
+			Entitled Software (IBM Z Mainframe Software License Management)
 			\begin{itemize}
-				\item Redesigned the output of report generation from HTML to XML/XSLT, which separates the content and style for easy support of report presentation in different styles.
-				\item Initiated and developed a test data builder tool for simplifying test data copy across environments, saving manual work by 85\%. (JDBC, Gson, jQuery, ZeroClipboard)
-				\item Initiated and developed a web viewer for displaying the hierarchy of underlying decision making tree, reducing the number of switches between UI panels by 80\%. (jsTree, Flexigrid, RESTful API)
+				\item Redesigned the report generation pipeline, by separating the data source and transformation. (C, XML, XSLT)
+				\item Initiated and developed a test data builder tool, saving manual work by 85\%. (JDBC, JSON, jQuery)
+				\item Implemented a web page for displaying the decision making tree. (jsTree, Flexigrid, Single-Page Application)
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
@@ -70,8 +77,8 @@
 	\begin{cvsection}{Education}
 		\begin{cvsubsection}{Beijing}{Beijing University of Technology}{Sep 2002 – Jul 2009}
 			\begin{itemize}
-				\item M.Eng. Degree in Computer Applied Technology, Jul 2009. GPA: 3.5
-				\item B.Eng. Degree in Computer Science and Technology, Jul 2006. GPA: 3.6
+				\item Master's Degree in Computer Applied Technology, Jul 2009. GPA: 3.5
+				\item Bachelor's Degree in Computer Science and Technology, Jul 2006. GPA: 3.6
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
@@ -79,22 +86,22 @@
 	\begin{cvsection}{Additional Experience and Awards}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item \textbf{GitHub Account:} \url{https://github.com/charles-wangkai}
+				\item \textbf{GitHub Profile:} \url{https://github.com/charles-wangkai}
+				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372th}}. (ID: goalboy1015)
+				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th. (ID: Kai)
 				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th. (ID: goalboy1015)
-				\item \textbf{Google Code Jam (2014):} Advanced to Round 2. Ranked 670th. (ID: goalboy1015)
-				\item \textbf{IBM CDL I/O Contest (2013):} A 3-day hackathon. Ranked 5th out of 64 projects. Developed a mobile app for reading analytics and recommendations.
 				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
-				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked top 4 out of 70000+ participants. (ID: goalboy)
+				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked top 10 out of 110000+ participants. (ID: goalboy)
 				\item \textbf{Topcoder - College Tour Beijing (2008):} Second Prize. Ranked 15th. (ID: GOALBOY)
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
 	
-	\begin{cvsection}{Languages and Technologies}
+	\begin{cvsection}{Skills}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item Java; Python; SQL; Shell; C/C++/Obj-C; HTML/CSS/Javascript; R; Octave/MATLAB; Haskell
-				\item Hadoop; Android/iOS Programming; Ruby on Rails; WebGL
+				\item Java; Python; C / C++; SQL; Shell; R; Haskell
+				\item Git; Web Development; Hadoop; Android / iOS Programming; WebGL
 				\item Algorithms; Machine Learning
 			\end{itemize}
 		\end{cvsubsection}
@@ -103,9 +110,9 @@
 	\begin{cvsection}{Favorite IT Books}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item Programming Pearls, 2nd Edition (Did all the exercises)
-				\item The Mythical Man-Month, Anniversary Edition
-				\item Clean Code
+				\item ``Programming Pearls'' (Did all the exercises)
+				\item ``Clean Code: A Handbook of Agile Software Craftsmanship''
+				\item ``Peopleware: Productive Projects and Teams''
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
