Update resume wording

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -60,7 +60,7 @@
 			\begin{itemize}
 				\item Integrated ship track information from the carrier Best Express into Amazon China MFN. (Java, Unit Test)
 				\item Enhanced the internal tool used by the operational team. (Ruby on Rails)
-				\item Built data warehouse reports on a regular basis for operational monitoring. (SQL)
+				\item Built data warehouse reports regularly for operational monitoring. (SQL)
 			\end{itemize}
 		\end{cvsubsection}
 		
