Update resume wording

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -87,7 +87,7 @@
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
 				\item \textbf{GitHub Profile:} \url{https://github.com/charles-wangkai}
-				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372th}}. (ID: goalboy1015)
+				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372nd}}. (ID: goalboy1015)
 				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th. (ID: Kai)
 				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th. (ID: goalboy1015)
 				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
