Resume - Add databases

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -41,8 +41,8 @@
 			Data Intelligence Platform for Key Decision Makers
 			\begin{itemize}
 				\item Explored and applied new methods in Tech Lab. (AWS Lambda, Google Apps Script, Slack Bot, NLP)
-				\item Led the development of the web dashboard. (React, Node.js, Elasticsearch, Redis, Code Review)
-				\item Developed web crawlers to extract public data. (Python, Scrapy, Reverse Engineering)
+				\item Led web application development. (React, Node.js, Elasticsearch, AWS Redshift, Redis, Code Review)
+				\item Developed web crawlers to extract public data. (Python, Scrapy, MongoDB, Reverse Engineering)
 			\end{itemize}
 		\end{cvsubsection}
 
