--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -28,7 +28,7 @@
 % Set applicant's personal data for header
 \name{Kai Wang \linebreak \linebreak \normalsize{Aim to Solve Any Technical Problems}}
 \address{Haidian District \linebreak Beijing, China}
-\contacts{(+86) 13811539414 \linebreak charles.wangkai@gmail.com}
+\contacts{charles.wangkai@gmail.com \linebreak (+86) 13811539414}
 
 \begin{document}
 
@@ -87,11 +87,11 @@
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
 				\item \textbf{GitHub Profile:} \url{https://github.com/charles-wangkai}
-				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372nd}}. (ID: goalboy1015)
-				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th. (ID: Kai)
-				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th. (ID: goalboy1015)
+				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372nd}} out of 35000+. (ID: goalboy1015)
+				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th out of 6000+. (ID: Kai)
+				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th out of 800+. (ID: goalboy1015)
 				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
-				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked top 10 out of 110000+ participants. (ID: goalboy)
+				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked 10th out of 110000+. (ID: goalboy)
 				\item \textbf{Topcoder - College Tour Beijing (2008):} Second Prize. Ranked 15th. (ID: GOALBOY)
 			\end{itemize}
 		\end{cvsubsection}
