Resume - Update word case

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -50,7 +50,7 @@
 			Business Intelligence Platform to Drive Growth
 			\begin{itemize}
 				\item Implemented ETL, user id mapping, key metrics. (Aliyun MaxCompute, SQL, Java)
-				\item Implemented a sales amount prediction application. (Machine Learning, Xgboost, Python)
+				\item Implemented a sales amount prediction application. (Machine Learning, XGBoost, Python)
 				\item Restored millions of hashed IMEI ids. (Multiprocessing, Java, AWS EC2)
 			\end{itemize}
 		\end{cvsubsection}
