Resume - Add JavaScript

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -100,7 +100,7 @@
 	\begin{cvsection}{Skills}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item Java; Python; C / C++; SQL; Shell; R; Haskell
+				\item Java; Python; JavaScript; C / C++; SQL; Shell; R; Haskell
 				\item Git; Web Development; Hadoop; Android / iOS Programming; WebGL
 				\item Algorithms; Machine Learning
 			\end{itemize}
