Add Google Code to I/O part

--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -89,10 +89,10 @@
 				\item \textbf{GitHub Profile:} \url{https://github.com/charles-wangkai}
 				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372nd}} out of 35000+. (ID: goalboy1015)
 				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th out of 6000+. (ID: Kai)
+				\item \textbf{Google Code Jam to I/O (2020):} Ranked 59th out of 2500+. (ID: goalboy1015)
 				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th out of 800+. (ID: goalboy1015)
 				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
 				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked 10th out of 110000+. (ID: goalboy)
-				\item \textbf{Topcoder - College Tour Beijing (2008):} Second Prize. Ranked 15th. (ID: GOALBOY)
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
