--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -28,7 +28,7 @@
 % Set applicant's personal data for header
 \name{Kai Wang \linebreak \linebreak \normalsize{Aim to Solve Any Technical Problems}}
 \address{Haidian District \linebreak Beijing, China}
-\contacts{charles.wangkai@gmail.com \linebreak (+86) 13811539414}
+\contacts{charles.wangkai@gmail.com \linebreak (+86) 13811539414 \linebreak github.com/charles-wangkai}
 
 \begin{document}
 
@@ -37,45 +37,57 @@
 	
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Senior Software Engineer}{BigOne Lab, China}{Dec 2017 – Oct 2019}
-			Data Intelligence Platform for Key Decision Makers
+		\begin{cvsubsection}{Senior Software Engineer}{Sogel}{2021 – 2024}
+			Outsourcing Projects
 			\begin{itemize}
-				\item Explored and applied new methods in Tech Lab. (AWS Lambda, Google Apps Script, Slack Bot, NLP)
-				\item Led web application development. (React, Node.js, Elasticsearch, AWS Redshift, Redis, Code Review)
-				\item Developed web crawlers to extract public data. (Python, Scrapy, MongoDB, Reverse Engineering)
+				\item Developed the backend of a real-time processing application for sensor data visualization. (Rust)
+				\item Designed and developed the backend of a translation editor Web application. (Java, Spring Boot, Elasticsearch)
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Big Data Engineer}{Ping++, China}{Dec 2015 – Nov 2017}
+		\begin{cvsubsection}{Senior Software Engineer}{Airbnb, China}{2020 – 2021}
+			Community Support Platform
+			\begin{itemize}
+				\item Built data hub services for reusing common processed data. (Java, Microservices)
+				\item Reorganized help articles to reduce customer support tickets. (A/B Testing)
+			\end{itemize}
+		\end{cvsubsection}
+
+		\begin{cvsubsection}{Senior Software Engineer}{BigOne Lab}{2017 – 2020}
+			Data Intelligence Platform for Key Decision Makers
+			\begin{itemize}
+				\item Explored and applied new methods in Tech Lab. (AWS Lambda, Google Apps Script, Slack Bot, NLP)
+				\item Developed web crawlers to extract public data. (Python, Redis, MongoDB, Reverse Engineering)
+			\end{itemize}
+		\end{cvsubsection}
+
+		\begin{cvsubsection}{Big Data Engineer}{Ping++}{2015 – 2017}
 			Business Intelligence Platform to Drive Growth
 			\begin{itemize}
-				\item Implemented ETL, user id mapping, key metrics. (Aliyun MaxCompute, SQL, Java)
-				\item Implemented a sales amount prediction application. (Machine Learning, XGBoost, Python)
-				\item Restored millions of hashed IMEI ids. (Multiprocessing, Java, AWS EC2)
+				\item Implemented data pipeline, user ID mapping, and key metrics.
+				\item Trained a sales amount prediction model for convenience stores.
 			\end{itemize}
 		\end{cvsubsection}
 		
-		\begin{cvsubsection}{Software Engineer}{Amazon, China}{Apr 2014 – Oct 2014}
-			MFNCOD (Merchant Fulfillment Network, Cash On Delivery)
+		\begin{cvsubsection}{Software Engineer}{Amazon, China}{2014 – 2015}
+			Merchant Fulfillment Network
 			\begin{itemize}
-				\item Integrated ship track information from the carrier Best Express into Amazon China MFN. (Java, Unit Test)
-				\item Enhanced the internal tool used by the operational team. (Ruby on Rails)
-				\item Built data warehouse reports regularly for operational monitoring. (SQL)
+				\item Integrated ship track information from the third-party carriers into Amazon.
+				\item Built operational reports queried from the data warehouse for monitoring and analyzing.
 			\end{itemize}
 		\end{cvsubsection}
 		
-		\begin{cvsubsection}{Software Engineer}{IBM, China Development Lab}{Jul 2009 – Apr 2014}
-			Entitled Software (IBM Z Mainframe Software License Management)
+		\begin{cvsubsection}{Software Engineer}{IBM, China Development Lab}{2009 – 2014}
+			IBM Z Mainframe Software License Management
 			\begin{itemize}
-				\item Redesigned the report generation pipeline, by separating the data source and transformation. (C, XML, XSLT)
-				\item Initiated and developed a test data builder tool, saving manual work by 85\%. (JDBC, JSON, jQuery)
-				\item Implemented a web page for displaying the decision making tree. (jsTree, Flexigrid, Single-Page Application)
+				\item Redesigned the report generation pipeline by separating the data source and transformation.
+				\item Initiated and developed a test data builder tool, saving manual work by 85\%.
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
 	
 	\begin{cvsection}{Education}
-		\begin{cvsubsection}{Beijing}{Beijing University of Technology}{Sep 2002 – Jul 2009}
+		\begin{cvsubsection}{Beijing}{Beijing University of Technology}{2002 – 2009}
 			\begin{itemize}
 				\item Master's Degree in Computer Applied Technology, Jul 2009. GPA: 3.5
 				\item Bachelor's Degree in Computer Science and Technology, Jul 2006. GPA: 3.6
@@ -86,13 +98,9 @@
 	\begin{cvsection}{Additional Experience and Awards}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item \textbf{GitHub Profile:} \url{https://github.com/charles-wangkai}
-				\item \textbf{Google Code Jam (2019):} Advanced to Round 3. {\href{http://charles-wangkai.github.io/certificates/certificate_google_code_jam_2019.pdf}{Ranked 372nd}} out of 35000+. (ID: goalboy1015)
-				\item \textbf{Facebook Hacker Cup (2019):} Advanced to Round 2. Ranked 465th out of 6000+. (ID: Kai)
-				\item \textbf{Google Code Jam to I/O (2020):} Ranked 59th out of 2500+. (ID: goalboy1015)
-				\item \textbf{Google Distributed Code Jam (2016):} Advanced to Round 2. Ranked 175th out of 800+. (ID: goalboy1015)
-				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 325 problems. (ID: goalboy)
-				\item \textbf{\href{https://www.hackerrank.com/projecteuler}{HackerRank ProjectEuler+ Contest}:} Ranked 10th out of 110000+. (ID: goalboy)
+				\item \textbf{Meta Hacker Cup (2023):} Advanced to Round 2. {\href{https://charles-wangkai.github.io/certificates/certificate_meta_hacker_cup_2023.png}{Ranked 803rd}} out of 20000+.
+				\item \textbf{\href{https://codeforces.com}{Codeforces}:} Solved 3200+ problems. Ranked top 200. (ID: goalboy)
+				\item \textbf{\href{https://projecteuler.net}{Project Euler}:} Level 13. Solved 329 problems. (ID: goalboy)
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
@@ -100,9 +108,8 @@
 	\begin{cvsection}{Skills}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item Java; Python; JavaScript; C / C++; SQL; Shell; R; Haskell
-				\item Git; Web Development; Hadoop; Android / iOS Programming; WebGL
-				\item Algorithms; Machine Learning
+				\item Java, Python, Rust, SQL, C, C++, JavaScript
+				\item Data Structures and Algorithms, Full Stack, Cloud Computing
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
@@ -112,7 +119,6 @@
 			\begin{itemize}
 				\item ``Programming Pearls'' (Did all the exercises)
 				\item ``Clean Code: A Handbook of Agile Software Craftsmanship''
-				\item ``Peopleware: Productive Projects and Teams''
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
