--- a/resume/kai_wang_resume.tex
+++ b/resume/kai_wang_resume.tex
@@ -37,7 +37,7 @@
 	
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Senior Software Engineer}{Sogel}{2021 – 2024}
+		\begin{cvsubsection}{Senior Software Engineer}{Sogel}{2021.07 – Now}
 			Outsourcing Projects
 			\begin{itemize}
 				\item Developed the backend of a real-time processing application for sensor data visualization. (Rust)
@@ -45,7 +45,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Senior Software Engineer}{Airbnb, China}{2020 – 2021}
+		\begin{cvsubsection}{Senior Software Engineer}{Airbnb, China}{2020.07 – 2021.07}
 			Community Support Platform
 			\begin{itemize}
 				\item Built data hub services for reusing common processed data. (Java, Microservices)
@@ -53,7 +53,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Senior Software Engineer}{BigOne Lab}{2017 – 2020}
+		\begin{cvsubsection}{Senior Software Engineer}{BigOne Lab}{2017.12 – 2020.07}
 			Data Intelligence Platform for Key Decision Makers
 			\begin{itemize}
 				\item Explored and applied new methods in Tech Lab. (AWS Lambda, Google Apps Script, Slack Bot, NLP)
@@ -61,7 +61,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Big Data Engineer}{Ping++}{2015 – 2017}
+		\begin{cvsubsection}{Big Data Engineer}{Ping++}{2015.12 – 2017.12}
 			Business Intelligence Platform to Drive Growth
 			\begin{itemize}
 				\item Implemented data pipeline, user ID mapping, and key metrics.
@@ -69,7 +69,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 		
-		\begin{cvsubsection}{Software Engineer}{Amazon, China}{2014 – 2015}
+		\begin{cvsubsection}{Software Engineer}{Amazon, China}{2014.04 – 2015.12}
 			Merchant Fulfillment Network
 			\begin{itemize}
 				\item Integrated ship track information from the third-party carriers into Amazon.
@@ -77,7 +77,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 		
-		\begin{cvsubsection}{Software Engineer}{IBM, China Development Lab}{2009 – 2014}
+		\begin{cvsubsection}{Software Engineer}{IBM, China Development Lab}{2009.07 – 2014.04}
 			IBM Z Mainframe Software License Management
 			\begin{itemize}
 				\item Redesigned the report generation pipeline by separating the data source and transformation.
@@ -87,7 +87,7 @@
 	\end{cvsection}
 	
 	\begin{cvsection}{Education}
-		\begin{cvsubsection}{Beijing}{Beijing University of Technology}{2002 – 2009}
+		\begin{cvsubsection}{Beijing}{Beijing University of Technology}{2002.09 – 2009.07}
 			\begin{itemize}
 				\item Master's Degree in Computer Applied Technology, Jul 2009. GPA: 3.5
 				\item Bachelor's Degree in Computer Science and Technology, Jul 2006. GPA: 3.6
